[package]
name = "hermes"
version = "0.1.0"
authors = ["Johan Cervantes <johancervantes21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = "0.11.4"
anyhow = "~1.0"
chrono = "~0.4"
futures = "~0.3"
hyper = { version = "~0.14", features = ["stream"] }
hyper-rustls = "~0.22"
log = "~0.4"
percent-encoding = "~2.1"
radix64 = "~0.6"
serde = "~1.0"
serde_json = "~1.0"
tokio-stream = "^0.1"
yup-oauth2 = "~5"
async-google-apis-common = {path = "./async-google-apis-common"}
env_logger = "0.9.0"
async-trait = "0.1.51"
